--- a/assets/scss/login_page.scss
+++ b/assets/scss/login_page.scss
@@ -13,6 +13,8 @@
     align-items: center;
     background-color: rgb(255, 0, 85);
     flex-wrap: wrap;
+    background-color: brown;
+    border-color: brown;
     // max-height: 1000px;
 }
 
