--- a/views/mailers/mail_footer.ejs
+++ b/views/mailers/mail_footer.ejs
@@ -2,11 +2,20 @@
 <br />
 <div style="color: white">
     <h3 style="margin-bottom: 5px">Regards</h3>
-    <img src="https://www.pngitem.com/pimgs/m/357-3577326_color-ball-logo-hd-png-download.png" alt="" style="height: 45px; width: 45px" />
+    <img src="https://www.pngitem.com/pimgs/m/357-3577326_color-ball-logo-hd-png-download.png" alt="" style="height: 45px; width: 45px; padding-left: 1px" />
     <br />
     <div style="width: fit-content">
         <span style="font-size: 20px; color: rgb(180, 33, 33)">Chitkara_Live</span>
         <br />
-        <span style="padding-left: 4px; color: black !important">be connected</span>
+        <span style="padding-left: 2px; color: black !important">be connected</span>
     </div>
+    <br />
+
+    <span style="color: white !important">For any other query, you can contact us on</span
+  >
+  <br />
+  <span style="color: white !important"
+    >Email:
+    <a href="mailTo:aaa.techy.in@gmail.com">aaa.techy.in@gmail.com</a></span
+  >
 </div>
