--- a/views/new_event_page.ejs
+++ b/views/new_event_page.ejs
@@ -15,7 +15,7 @@
           <img
             height="32px"
             width="25px"
-            src="https://cdn-icons-png.flaticon.com/512/1827/1827363.png"
+            src="/uploads/icons/1.event_start_time.png"
             alt="start-time"
           />
         </abbr>
@@ -26,7 +26,7 @@
           <img
             height="32px"
             width="25px"
-            src="https://cdn-icons-png.flaticon.com/512/1827/1827359.png"
+            src="/uploads/icons/2.event_end_time.png"
             alt="end-time"
           />
         </abbr>
@@ -34,7 +34,7 @@
             </div>
             <div style="display: none; text-align: center; color: red" id="time-error"></div>
             <div style="display: flex; flex-direction: row">
-                <img height="20px" width="20px" src="https://cdn-icons.flaticon.com/png/512/2838/premium/2838912.png?token=exp=1641372039~hmac=4393bd139984d88263fb11cf012d489b" alt="" />
+                <img height="20px" width="20px" src="/uploads/icons/40.venu.png" alt="" />
                 <input style="
             border: 1px solid whitesmoke;
             width: 75%;
