--- a/views/organiser/partials/_header.ejs
+++ b/views/organiser/partials/_header.ejs
@@ -20,6 +20,9 @@
                         <li>
                             <a href="/organiser/sign-in ">Sign-In</a>
                         </li>
+                        <li>
+                            <a href="/organiser/mail-page">Mails</a>
+                        </li>
                     </ul>
                     <%}else{%>
 
