--- a/views/partials/_footer.ejs
+++ b/views/partials/_footer.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/css/footer.css" />
+<!-- <link rel="stylesheet" href="/css/footer.css" />
 <footer>
     <div id="footer">
         <a href="/">
@@ -17,4 +17,4 @@
             <div>Events</div>
         </a>
     </div>
-</footer>
+</footer> -->
