--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -38,7 +38,9 @@
 <header style="z-index: 999999999">
     <div class="left-div">
         <div>
-            <img height="40px" width="40px" src="https://www.pngitem.com/pimgs/m/357-3577326_color-ball-logo-hd-png-download.png" alt="logo" />
+            <a href="/">
+                <img height="40px" width="40px" src="\uploads\icons/18.logo.png" alt="logo" />
+            </a>
         </div>
         <!-- <div style="display: flex; flex-direction: column">
             <div style="font-size: 18">chitkara_live</div>
@@ -53,32 +55,32 @@
     </div>
     <div class="mid-div">
         <a href="/">
-            <div class="current-active" id="home" onclick="changeHeaderTab('home')">
-                <img height="25px" width="25px" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/34/Home-icon.svg/1200px-Home-icon.svg.png" alt="Home" />
+            <div id="home" onclick="changeHeaderTab('home')">
+                <img height="25px" width="25px" src="\uploads\icons/30.home.png" alt="Home" />
                 <span>Home</span>
             </div>
         </a>
         <a href="/home-option-page?type=Depart">
             <div id="depart" onclick="changeHeaderTab('depart')">
-                <img height="25px" width="25px" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRoQKCrRgkQx75ymhbX6_fsVNylg0qdNLX4xpywXzgk5d3bdPuI1S4EqD3ysRzspxfMVfg&usqp=CAU" alt="Home" />
+                <img height="25px" width="25px" src="\uploads\icons/19.depart.png" alt="depart" />
                 <span>Depart</span>
             </div>
         </a>
         <a href="/home-option-page?type=Hostel">
             <div id="hostel" onclick="changeHeaderTab('hostel')">
-                <img height="25px" width="25px" src="https://www.pinclipart.com/picdir/middle/187-1878120_building-icon-svg-png-icon-free-download-384126.png" alt="Home" />
+                <img height="25px" width="25px" src="\uploads\icons/20.hostel.png" alt="hostel" />
                 <span>Hostel</span>
             </div>
         </a>
         <a href="/home-option-page?type=Club">
             <div id="club" onclick="changeHeaderTab('club')">
-                <img height="25px" width="25px" src="https://www.freeiconspng.com/thumbs/group-png/group-of-people-in-a-formation-23.png" alt="Home" />
+                <img height="25px" width="25px" src="\uploads\icons/21.club.png" alt="club" />
                 <span>Clubs</span>
             </div>
         </a>
         <a href="/user/events">
             <div id="event" onclick="changeHeaderTab('event')">
-                <img height="25px" width="25px" src="https://thumbs.dreamstime.com/b/open-microphone-shows-black-glyph-icon-stand-up-comedy-music-competition-karaoke-night-talent-show-fun-event-entertainment-227569201.jpg" alt="Home" />
+                <img height="25px" width="25px" src="\uploads\icons/22.event.png" alt="event" />
                 <span>Events</span>
             </div>
         </a>
@@ -93,7 +95,7 @@
                     <div>
                         <abbr title="Toggle B/w admin acc. & user acc.">
           <img
-            src="https://img.icons8.com/ios-filled/344/user-group-man-man.png"
+            src="\uploads\icons/23.toggle-account.png"
             style="height: 30px; width: 30px"
           />
         </abbr>
@@ -121,7 +123,7 @@
                         <%}%>
                             <div id="complete-toggle-container" style="display: flex; flex-direction: row">
                                 <div class="header-day-night" style="padding-right: 5px; padding-left: 5px">
-                                    <img src="https://cdn-icons-png.flaticon.com/512/702/702471.png" alt="day" height="32px" width="32px" />
+                                    <img src="\uploads\icons/24.day-night.png" alt="day" height="32px" width="32px" />
                                 </div>
                             </div>
     </div>
@@ -131,7 +133,7 @@
         <div>
             <a onclick="handleActiveCreatorPage()" style="position: fixed; right: 2px; top: 2px; cursor: pointer">
                 <div>
-                    <img height="25px" width="25px" src="https://cdn-icons-png.flaticon.com/512/6388/6388826.png" alt="detail" />
+                    <img height="25px" width="25px" src="\uploads\icons/13.detail.png" alt="detail" />
                 </div>
             </a>
         </div>
