--- a/views/team.ejs
+++ b/views/team.ejs
@@ -152,7 +152,7 @@
     let rgb = generateDarkColorRgb();
     let backImage = item.getAttribute("backImage");
     backImage = backImage.replace(/\\/g, "/");
-    console.log("backImage is ", backImage);
+    console.log("backImage is ~~~~~~~~~~~~~~~~~~ %%%%%%%%%%%% ", backImage);
     let image =
       "url('http://localhost:8000" +
       backImage +
