--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -2,7 +2,7 @@
 <div id="profile-page">
     <div id="my-profile">
         <div id="first-div">
-            <img src="https://thingscareerrelated.files.wordpress.com/2021/10/default-background-image.png" alt="pic" />
+            <img src="/uploads/icons/9.profile_back.png" alt="pic" />
         </div>
         <div id="profile">
             <div id="profile-container">
@@ -16,7 +16,7 @@
             justify-content: center;
             align-items: center;
           ">
-                        <img height="40px" style="border-radius: 50%" width="40px" src="https://cdn-icons.flaticon.com/png/128/5441/premium/5441871.png?token=exp=1640369686~hmac=a2ee7677364520187b02dd2cf1fabdce" alt="user" />
+                        <img height="40px" style="border-radius: 50%" width="40px" src="/uploads/icons/36.member.png" alt="user" />
 
                         <!-- <Span>7 Members</span> -->
                     </a>
@@ -96,7 +96,7 @@
             ><img
               height="50px"
               width="50px"
-              src="https://cdn-icons-png.flaticon.com/512/3820/3820188.png"
+              src="/uploads/icons/11.add_new_member.png"
               alt="add" /></abbr
         ></a>
       </div>
@@ -116,7 +116,7 @@
               <img
                 height="40px"
                 width="40px"
-                src="https://cdn-icons.flaticon.com/png/512/3128/premium/3128267.png?token=exp=1640848641~hmac=879cf7ab8261b8cd0629393b47a23deb"
+                src="/uploads/icons/37.gmail.png"
                 alt="email"
             /></a>
           </abbr>
@@ -129,7 +129,7 @@
               <img
                 height="40px"
                 width="40px"
-                src="https://cdn-icons.flaticon.com/png/512/4494/premium/4494494.png?token=exp=1640849753~hmac=7822cc3bc9c6116720e0c47628d55f1d"
+                src="/uploads/icons/38.whatsapp.png"
                 alt="whatsapp"
             /></a>
           </abbr>
@@ -147,7 +147,7 @@
               ><img
                 height="40px"
                 width="40px"
-                src="https://cdn-icons-png.flaticon.com/512/724/724664.png"
+                src="/uploads/icons/12.call_icon.png"
                 alt="mobile"
             /></a>
           </abbr>
@@ -288,7 +288,7 @@
             <img
               height="25px"
               width="25px"
-              src="https://cdn-icons-png.flaticon.com/512/6388/6388826.png"
+              src="/uploads/icons/13.detail.png"
               alt="detail"
             />
           </a>
@@ -350,26 +350,26 @@
         id="span-1"
         onclick="changeTab('span-1','post')"
         ><img
-          src="https://cdn-icons-png.flaticon.com/512/6276/6276430.png"
-          alt=""
+          src="/uploads/icons/14.my_profile_photo_post.png"
+          alt="post"
         />
         <sub style="font-size: 18">Posts</sub>
       </span>
                                             <span class="head-span" id="span-2" onclick="changeTab('span-2','event')"><img
-          src="https://cdn-icons-png.flaticon.com/512/3143/3143636.png"
-          alt=""
+          src="/uploads/icons/15.my_profile_event_post.png"
+          alt="event"
         /><sub style="font-size: 18">Events</sub></span
       >
       <span class="head-span" id="span-3" onclick="changeTab('span-3','notice')"
         ><img
-          src="https://cdn-icons-png.flaticon.com/512/4807/4807731.png"
-          alt=""
+          src="/uploads/icons/16.my_profile_notice_post.png"
+          alt="notice"
         /><sub style="font-size: 18">Notices</sub></span
       >
       <span class="head-span" id="span-4" onclick="changeTab('span-4','alert')"
         ><img
-          src="https://cdn-icons-png.flaticon.com/512/564/564619.png"
-          alt=""
+          src="/uploads/icons/17.my_profile_alert_post.png"
+          alt="alert"
         /><sub style="font-size: 18">Alerts</sub></span
       >
     </h1>
