--- a/views/mailers/event/new_events.ejs
+++ b/views/mailers/event/new_events.ejs
@@ -40,9 +40,7 @@
       <li>Event image or many more...</li>
     </ul>
 
-    <a href="<%=url%>/user/events/" style="color: hotpink"
-      >click here to see it</a
-    >
+    <a href="<%=url%>/user/events/">click here to see it</a>
   </div>
 
   <%-include('../mail_footer');-%>
