done with env file

--- a/views/activate_creator_acc_page.ejs
+++ b/views/activate_creator_acc_page.ejs
@@ -4,7 +4,7 @@
         opacity: 0.7;
     }
 </style>
-<link rel="stylesheet" href="/css/sign_up_using_link.css" />
+<link rel="stylesheet" href="<%=assetPath('css/sign_up_using_link.css')%>" />
 <div id="set-new-password-link-container">
     <h2 style="text-align: center; margin-top: 5px">
         Activate Creator Account Form
