--- a/views/edit-profile-page.ejs
+++ b/views/edit-profile-page.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/css/new_post.css" />
+<link rel="stylesheet" href="<%=assetPath('css/new_post.css')%>" />
 <div id="update-profile">
     <div id="img-container">
         <img src="<%=locals.user.pic%>" alt="" height="65px" width="65px" style="border-radius: 50%" />
@@ -45,4 +45,4 @@
     </div>
 </div>
 
-<script src="/js/edit_profile.js"></script>
+<script src="<%=assetPath('js/edit_profile.js')%>"></script>
