--- a/views/events_page.ejs
+++ b/views/events_page.ejs
@@ -1,5 +1,5 @@
-<link rel="stylesheet" href="/css/event-page.css" />
-<link rel="stylesheet" href="/css/post.css" />
+<link rel="stylesheet" href="<%=assetPath('css/event-page.css')%>" />
+<link rel="stylesheet" href="<%=assetPath('css/post.css')%>" />
 <div id="main-container">
     <div id="events-container">
         <div id="events-head">
@@ -26,6 +26,6 @@
     </div>
 </div>
 
-<script src="/js/events.js"></script>
+<script src="<%=assetPath('js/events.js')%>"></script>
 <!-- <script src="/js/home.js"></script>
 <script src="/js/post.js"></script> -->
