--- a/views/likes.ejs
+++ b/views/likes.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/css/likes-page.css" />
+<link rel="stylesheet" href="<%=assetPath('css/likes-page.css')%>" />
 
 <div id="likes-page">
     <div style="
