--- a/views/mess.ejs
+++ b/views/mess.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/css/mess.css" />
+<link rel="stylesheet" href="<%=assetPath('css/mess.css')%>" />
 <div id="mess-container">
     <div id="menu-header" style="
       background-color: rgb(49, 247, 49);
