--- a/views/my_save_items.ejs
+++ b/views/my_save_items.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/css/save_items.css" />
+<link rel="stylesheet" href="<%=assetPath('css/save_items.css')%>" />
 <div id="my-save-items">
     <div id="save-item-headers">
         <div id="img-container">
