--- a/views/my_save_items_details.ejs
+++ b/views/my_save_items_details.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/css/user_posts.css" />
+<link rel="stylesheet" href="<%=assetPath('css/user_posts.css')%>" />
 <div id="save_items">
     <div id="detail-head">
         <div style="
