--- a/views/new_poll_page.ejs
+++ b/views/new_poll_page.ejs
@@ -1,5 +1,5 @@
-<link rel="stylesheet" href="/css/new_post.css" />
-<link rel="stylesheet" href="/css/new_poll.css" />
+<link rel="stylesheet" href="<%=assetPath('css/new_post.css')%>" />
+<link rel="stylesheet" href="<%=assetPath('css/new_poll.css')%>" />
 <div id="new-post" style="align-items: center">
     <div id="img-container">
         <img src="<%=locals.user.pic%>" alt="" height="65px" width="65px" style="border-radius: 50%" />
@@ -30,4 +30,4 @@
     </div>
 </div>
 
-<script src="/js/notice.js"></script>
+<script src="<%=assetPath('js/notice.js')%>"></script>
