--- a/views/poll_vote_page.ejs
+++ b/views/poll_vote_page.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/css/poll_votes.css" />
+<link rel="stylesheet" href="<%=assetPath('css/poll_votes.css')%>" />
 <div id="poll-votes">
     <div id="img-container">
         <img src="<%=locals.user.pic%>" alt="" height="65px" width="65px" style="border-radius: 50%" />
