--- a/views/requests.ejs
+++ b/views/requests.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/css/requests.css" />
+<link rel="stylesheet" href="<%=assetPath('css/requests.css')%>" />
 
 <div id="requests-container">
     <div>
@@ -117,4 +117,4 @@
   </div>
 </div>
 
-<script src="/js/requests.js"></script>
+<script src="<%=assetPath('js/requests.js')%>"></script>
