--- a/views/select_user_page.ejs
+++ b/views/select_user_page.ejs
@@ -1,5 +1,5 @@
-<link rel="stylesheet" href="/css/new_post.css" />
-<link rel="stylesheet" href="/css/option-page.css" />
+<link rel="stylesheet" href="<%=assetPath('css/new_post.css')%>" />
+<link rel="stylesheet" href="<%=assetPath('css/option-page.css')%>" />
 <div id="new-post" style="width: 40%; min-width: 500px">
     <div id="img-container">
         <img src="<%=locals.user.pic%>" alt="" height="65px" width="65px" style="border-radius: 50%" />
