--- a/views/setNewPasswordUsingLink.ejs
+++ b/views/setNewPasswordUsingLink.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/css/sign_up_using_link.css" />
+<link rel="stylesheet" href="<%=assetPath('css/sign_up_using_link.css')%>" />
 <div id="set-new-password-link-container">
     <h2 style="text-align: center; margin-top: 5px">Set New Password Form</h2>
     <form action="/update-password-with-secret" method="POST">
