--- a/views/signUpUsingLink.ejs
+++ b/views/signUpUsingLink.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/css/sign_up_using_link.css" />
+<link rel="stylesheet" href="<%=assetPath('css/sign_up_using_link.css')%>" />
 <div id="sign-up-link-container">
     <h2 style="text-align: center; margin-top: 5px">Sign-Up Form</h2>
     <form action="/sign-up-with-secret" method="POST" style="margin: auto">
