--- a/views/sign_in.ejs
+++ b/views/sign_in.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/css/login_page.css" />
+<link rel="stylesheet" href="<%=assetPath('css/login_page.css')%>" />
 <div id="outer">
     <div style="
       display: flex;
@@ -16,7 +16,7 @@
         margin-bottom: 0px;
       ">
             <div>
-                <img src="/uploads/icons/18.logo.png" alt="logo" style="height: 50px; width: 50px" />
+                <img src="uploads/icons/18.logo.png" alt="logo" style="height: 50px; width: 50px" />
             </div>
 
             <div style="
@@ -129,7 +129,7 @@
           "
         >
           <img
-            src="/uploads/icons/8.google-logo-png-icon-free-download.png"
+            src="uploads/icons/8.google-logo-png-icon-free-download.png"
             alt="logo"
             height="40px"
             width="40px"
@@ -153,4 +153,4 @@
   </div>
 </div>
 
-<script src="/js/login.js"></script>
+<script src="<%=assetPath('js/login.js')%>"></script>
