--- a/views/team.ejs
+++ b/views/team.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/css/team.css" />
+<link rel="stylesheet" href="<%=assetPath('css/team.css')%>" />
 <div id="team-contaainer" style="height: auto; width: 100%">
     <%var i=0;%>
         <%for(member of _user.related.teamMembers){%>
