--- a/views/updateOrAddMemberPage.ejs
+++ b/views/updateOrAddMemberPage.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/css/new_post.css" />
+<link rel="stylesheet" href="<%=assetPath('css/new_post.css')%>" />
 
 <div id="new-post" style="width: 40%; min-width: 500px">
     <div id="img-container">
