--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/css/my-profile-page.css" />
+<link rel="stylesheet" href="<%=assetPath('css/my-profile-page.css')%>" />
 <div id="profile-page">
     <div id="my-profile">
         <div id="first-div">
@@ -468,4 +468,4 @@
   <%}%>
 </div>
 
-<script src="/js/profile.js"></script>
+<script src="<%=assetPath('js/profile.js')%>"></script>
