--- a/views/comments.ejs
+++ b/views/comments.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/css/comment.css" />
+<link rel="stylesheet" href="<%=assetPath('css/comment.css')%>" />
 <div class="comment-container" id="comment-<%=post.id%>">
     <div class="comment-head" id="comment-head-<%=post.id%>">
         <%=post.comments.length%> Comments
