--- a/views/event_location.ejs
+++ b/views/event_location.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/css/new_post.css" />
+<link rel="stylesheet" href="<%=assetPath('css/new_post.css')%>" />
 
 <div id="new-post" style="width: 40%; max-width: 40%">
     <div id="img-container">
