--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/css/home.css" />
+<link rel="stylesheet" href="<%=assetPath('css/home.css')%>" />
 
 <div id="home-container">
 
@@ -307,4 +307,4 @@
                                             </div>
                         </div>
         </div>
-        <script src="/js/home.js"></script>
+        <script src="<%=assetPath('js/home.js')%>"></script>
