--- a/views/home_option_page.ejs
+++ b/views/home_option_page.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/css/home_option_page.css" />
+<link rel="stylesheet" href="<%=assetPath('css/home_option_page.css')%>" />
 <%if(users.length==0){%>
     <div class="page-content-box">
         <div style="margin: auto; font-size: 35px; width: fit-content; margin-top: 50px">
