--- a/views/menu_update.ejs
+++ b/views/menu_update.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/css/new_post.css" />
+<link rel="stylesheet" href="<%=assetPath('css/new_post.css')%>" />
 
 <div id="new-post" style="width: 40%; min-width: 500px">
     <div id="img-container">
@@ -72,4 +72,4 @@
     timing[parseInt(menuHead.getAttribute("time"))] +
     " Menu";
 </script>
-<script src="/js/new_post.js "></script>
+<script src="<%=assetPath('js/new_post.js')%>"></script>
