--- a/views/new_alert_page.ejs
+++ b/views/new_alert_page.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/css/new_post.css" />
+<link rel="stylesheet" href="<%=assetPath('css/new_post.css')%>" />
 <div id="new-post">
     <div id="img-container">
         <img src="<%=locals.user.pic%>" alt="" height="65px" width="65px" style="border-radius: 50%" />
