--- a/views/new_post_page.ejs
+++ b/views/new_post_page.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/css/new_post.css" />
+<link rel="stylesheet" href="<%=assetPath('css/new_post.css')%>" />
 
 <div id="new-post">
     <div id="img-container">
@@ -27,4 +27,4 @@
     </div>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="/js/new_post.js "></script>
+<script src="<%=assetPath('js/new_post.js')%>"></script>
