--- a/views/notice.ejs
+++ b/views/notice.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/css/notice.css" />
+<link rel="stylesheet" href="<%=assetPath('css/notice.css')%>" />
 <%if(noticeLength==0){%>
     <div id="no-notice" style="margin: auto; font-size: 35; width: fit-content; margin-top: 50px">
         No Notice Found
