--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/css/header.css" />
+<link rel="stylesheet" href="<%=assetPath('css/header.css')%>" />
 <!-- <header>
     <div>
         <img src="" alt="Logo" />
@@ -139,6 +139,6 @@
         </div>
         <%}%>
 </header>
-<script src="/js/header.js"></script>
+<script src="<%=assetPath('js/header.js')%>"></script>
 
 <!-- <script src="/js/ajax_request.js"></script> -->
