--- a/views/posts.ejs
+++ b/views/posts.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/css/post.css" />
+<link rel="stylesheet" href="<%=assetPath('css/post.css')%>" />
 <div id="post-container">
     <%var count=0;%>
         <%for(let post of posts){%>
