organiser page styling added

--- a/views/organiser/add_new_creator_or_organiser_page.ejs
+++ b/views/organiser/add_new_creator_or_organiser_page.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/css/add_new_page.css" />
+<link rel="stylesheet" href="<%=assetPath('css/add_new_page.css')%>" />
 <div id="add-new-page">
     <h1>Add New Creator/Organiser</h1>
     <form action="/organiser/add_new_creator_or_organiser" method="POST">
