--- a/views/organiser/home.ejs
+++ b/views/organiser/home.ejs
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="/css/organiser_home.css" />
+    <link rel="stylesheet" href="<%=assetPath('css/organiser_home.css')%>" />
 </head>
 
 <body>
