--- a/views/organiser/my_profile.ejs
+++ b/views/organiser/my_profile.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/css/organiser_my_profile.css" />
+<link rel="stylesheet" href="<%=assetPath('css/organiser_my_profile.css')%>" />
 <div id="my-profile">
     <div>
         <img src="<%=locals.my.pic%>" alt="profile pic not available" height="100px" width="100px" style="border-radius: 50%" />
