--- a/views/organiser/profile.ejs
+++ b/views/organiser/profile.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/css/organiser_profile_page.css" />
+<link rel="stylesheet" href="<%=assetPath('css/organiser_profile_page.css')%>" />
 <div id="profile-page">
     <div>
         <div>
