--- a/views/organiser/search_result.ejs
+++ b/views/organiser/search_result.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/css/organiser_search_result.css" />
+<link rel="stylesheet" href="<%=assetPath('css/organiser_search_result.css')%>" />
 <div id="search-result">
     <h1>Search Results</h1>
     <div>
