--- a/views/organiser/sign_in.ejs
+++ b/views/organiser/sign_in.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/css/organiser-login-page.css" />
+<link rel="stylesheet" href="<%=assetPath('css/organiser-login-page.css')%>" />
 <div id="organiser-login">
     <div id="header-div">
         <h1 style="text-align: center">Organiser Sign-In Page</h1>
