--- a/views/organiser/check_email_page.ejs
+++ b/views/organiser/check_email_page.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/css/organiser_check_email_page.css" />
+<link rel="stylesheet" href="<%=assetPath('css/organiser_check_email_page.css')%>" />
 <div id="check-email-container">
     <div>
         <h3>Find Student To Admin</h3>
