organiser header done

--- a/views/organiser/partials/_header.ejs
+++ b/views/organiser/partials/_header.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/css/organiser_header.css" />
+<link rel="stylesheet" href="<%=assetPath('css/organiser_header.css')%>" />
 <header>
     <div>
         <a href="/organiser"> <img src="" alt="Logo" /></a>
